tests/ui/attributes/unused-item-in-attr.stderr
error: attribute value must be a literal
  --> $DIR/unused-item-in-attr.rs:1:7
   |
LL | #[w = { extern crate alloc; }]
   |       ^^^^^^^^^^^^^^^^^^^^^^^

error: cannot find attribute `w` in the crate root
  --> $DIR/unused-item-in-attr.rs:1:3
   |
LL | #[w = { extern crate alloc; }]
   |   ^ not found in the crate root

error: aborting due to 2 previous errors

